增加middleware示例
