# app/http/api/v1/example/example.go
@@ -1,6 +1,9 @@
 package example
 
-import "gin-api/app/http/api"
+import (
+	"gin-api/app/http/api"
+	"gin-api/app/http/middleware"
+)
 
 type Example struct {
 	api.Api
@@ -14,4 +17,7 @@ func (i *Example) SetRouter(r api.IRouter) {
 	rg.GET("/error/custom", i.ErrorCustom)
 	rg.GET("/redis", i.Redis)
 	rg.GET("/mysql", i.Mysql)
+
+	rg.Use(middleware.NewTest(r.App()).Handle)
+	rg.GET("/middleware", i.Middleware)
 }
