# app/http/api/v1/example/middleware.go
@@ -1,0 +1,14 @@
+package example
+
+import (
+	"gin-api/app/http/api"
+)
+
+// @Tags Example
+// @Summary 中间件
+// @Produce json
+// @Router /v1/example/middleware [get]
+// @Success 200
+func (i *Example) Middleware(ctx *api.Ctx) (interface{}, error) {
+	return "I used a middleware", nil
+}
