# docs/swagger.json
@@ -55,6 +55,22 @@
                 }
             }
         },
+        "/v1/example/middleware": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Example"
+                ],
+                "summary": "中间件",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/v1/example/mysql": {
             "get": {
                 "produces": [
